--- a/pkg/pipelinescheduler/test_data/no_postsubmits_with_parent/parent.yaml
+++ b/pkg/pipelinescheduler/test_data/no_postsubmits_with_parent/parent.yaml
@@ -1,11 +1,11 @@
 trigger:
-  trustedOrg: roadrunner-corp
-  ignoreOkToTest: true
-  onlyOrgMembers: false
+  trusted_org: roadrunner-corp
+  ignore_ok_to_test: true
+  only_org_members: false
 approve:
-  lgtmActsAsApprove: true
-  ignoreReviewState: false
-externalPlugins:
+  lgtm_acts_as_approve: true
+  ignore_review_state: false
+external_plugins:
   entries:
     - name: jx-app-cheese
       endpoint: http://jx-app-cheese
