--- a/pkg/pipelinescheduler/test_data/no_postsubmits_with_parent/repo.yaml
+++ b/pkg/pipelinescheduler/test_data/no_postsubmits_with_parent/repo.yaml
@@ -2,8 +2,8 @@ postsubmits:
   replace: true
 
 trigger:
-  joinOrgUrl: http://org-url
-  onlyOrgMembers: true
+  join_org_url: http://org-url
+  only_org_members: true
 
 plugins:
   entries:
