--- a/pkg/cmd/scheduler/test_data/versionStream/schedulers/in-repo.yaml
+++ b/pkg/cmd/scheduler/test_data/versionStream/schedulers/in-repo.yaml
@@ -5,9 +5,9 @@ metadata:
   name: in-repo
 spec:
   approve:
-    issueRequired: false
-    lgtmActsAsApprove: true
-    requireSelfApproval: true
+    issue_required: false
+    lgtm_acts_as_approve: true
+    require_self_approval: true
   merger:
     blockerLabel: ""
     maxGoroutines: 0
@@ -18,9 +18,9 @@ spec:
       required-contexts: { }
       required-if-present-contexts: { }
       skipUnknownContexts: false
-    prStatusBaseUrl: ""
+    pr_status_base_url: ""
     squashLabel: ""
-    targetUrl: http://deck-jx.35.192.148.208.nip.io
+    target_url: http://deck-jx.35.192.148.208.nip.io
   plugins:
     entries:
       - approve
@@ -43,9 +43,9 @@ spec:
   schedulerAgent:
     agent: tekton
   trigger:
-    ignoreOkToTest: false
-    joinOrgUrl: ""
-    onlyOrgMembers: false
-    trustedOrg: todo
+    ignore_ok_to_test: false
+    join_org_url: ""
+    only_org_members: false
+    trusted_org: todo
   welcome:
     - message_template: Welcome
