--- a/pkg/pipelinescheduler/test_data/only_plugins_from_parent/parent.yaml
+++ b/pkg/pipelinescheduler/test_data/only_plugins_from_parent/parent.yaml
@@ -1,22 +1,22 @@
 trigger:
-  trustedOrg: roadrunner-corp
-  joinOrgUrl: http://org-url
-  ignoreOkToTest: true
-  onlyOrgMembers: true
+  trusted_org: roadrunner-corp
+  join_org_url: http://org-url
+  ignore_ok_to_test: true
+  only_org_members: true
 
 approve:
-  lgtmActsAsApprove: true
-  ignoreReviewState: false
+  lgtm_acts_as_approve: true
+  ignore_review_state: false
 
-externalPlugins:
+external_plugins:
   entries:
     - name: jx-app-cheese
       endpoint: http://jx-app-cheese
 
 lgtm:
-  reviewActsAsLgtm: false
-  storeTreeHash: false
-  trustedTeamForStickyLgtm: team1
+  review_acts_as_lgtm: false
+  store_tree_hash: false
+  trusted_team_for_sticky_lgtm: team1
 
 plugins:
   entries:
