--- a/pkg/cmd/scheduler/test_data/versionStream/schedulers/default.yaml
+++ b/pkg/cmd/scheduler/test_data/versionStream/schedulers/default.yaml
@@ -1,5 +1,4 @@
-# Source: jxboot-helmfile-resources/templates/default-scheduler.yaml
-apiVersion: jenkins.io/v1
+apiVersion: gitops.jenkins-x.io/v1alpha1
 kind: Scheduler
 metadata:
   name: default
@@ -9,17 +8,17 @@ spec:
     lgtm_acts_as_approve: true
     require_self_approval: true
   merger:
-    blockerLabel: ""
-    maxGoroutines: 0
+    blocker_label: ""
+    max_goroutines: 0
     merge_method: merge
     policy:
-      fromBranchProtection: true
+      from-branch-protection: true
       optional-contexts: { }
       required-contexts: { }
       required-if-present-contexts: { }
-      skipUnknownContexts: false
+      skip-unknown-contexts: false
     pr_status_base_url: ""
-    squashLabel: ""
+    squash_label: ""
     target_url: http://deck-jx.35.192.148.208.nip.io
   plugins:
     entries:
@@ -39,7 +38,7 @@ spec:
       - dog
       - pony
   policy:
-    protectTested: true
+    protect_tested: true
   postsubmits:
     entries:
       - agent: tekton
@@ -68,7 +67,8 @@ spec:
         policy:
           required_status_checks:
             contexts:
-              - pr-build
+              entries:
+                - pr-build
         queries:
           - excludedBranches: { }
             included_branches: { }
@@ -78,11 +78,11 @@ spec:
             milestone: ""
             missingLabels:
               entries:
-              - do-not-merge
-              - do-not-merge/hold
-              - do-not-merge/work-in-progress
-              - needs-ok-to-test
-              - needs-rebase
+                - do-not-merge
+                - do-not-merge/hold
+                - do-not-merge/work-in-progress
+                - needs-ok-to-test
+                - needs-rebase
             review_approved_required: false
           - excludedBranches: { }
             included_branches: { }
@@ -92,11 +92,11 @@ spec:
             milestone: ""
             missingLabels:
               entries:
-              - do-not-merge
-              - do-not-merge/hold
-              - do-not-merge/work-in-progress
-              - needs-ok-to-test
-              - needs-rebase
+                - do-not-merge
+                - do-not-merge/hold
+                - do-not-merge/work-in-progress
+                - needs-ok-to-test
+                - needs-rebase
             review_approved_required: false
         report: true
         rerun_command: /test this
