--- a/pkg/pipelinescheduler/test_data/multiple_contexts/repo.yaml
+++ b/pkg/pipelinescheduler/test_data/multiple_contexts/repo.yaml
@@ -1,7 +1,7 @@
 schedulerAgent:
   agent: prow
 policy:
-  protectTested: true
+  protect_tested: true
 postsubmits:
   entries:
     - name: release
@@ -30,7 +30,7 @@ presubmits:
               - needs-rebase
       policy:
         protect: true
-        requiredStatusChecks:
+        required_status_checks:
           contexts:
             entries:
               - integration
@@ -53,7 +53,7 @@ presubmits:
               - needs-rebase
       policy:
         protect: true
-        requiredStatusChecks:
+        required_status_checks:
           contexts:
             entries:
               - context2
@@ -76,5 +76,5 @@ presubmits:
               - needs-rebase
 merger:
   policy:
-    fromBranchProtection: true
-    skipUnknownContexts: false
+    from-branch-protection: true
+    skip-unknown-contexts: false
