--- a/pkg/pipelinescheduler/test_data/repo/repo.yaml
+++ b/pkg/pipelinescheduler/test_data/repo/repo.yaml
@@ -1,7 +1,7 @@
 schedulerAgent:
   agent: prow
 policy:
-  protectTested: true
+  protect_tested: true
 postsubmits:
   entries:
     - name: release
@@ -30,11 +30,11 @@ presubmits:
               - needs-rebase
       policy:
         protect: true
-        requiredStatusChecks:
+        required_status_checks:
           contexts:
             entries:
               - integration
 merger:
   policy:
-    fromBranchProtection: true
-    skipUnknownContexts: false
+    from-branch-protection: true
+    skip-unknown-contexts: false
