--- a/pkg/cmd/helmfile/move/test_data/output/helmfile-b22978a4-jxboot-helmfile-resources/jxboot-helmfile-resources/templates/release-only-scheduler.yaml
+++ b/pkg/cmd/helmfile/move/test_data/output/helmfile-b22978a4-jxboot-helmfile-resources/jxboot-helmfile-resources/templates/release-only-scheduler.yaml
@@ -11,17 +11,17 @@ spec:
     lgtm_acts_as_approve: true
     require_self_approval: true
   merger:
-    blockerLabel: ""
-    maxGoroutines: 0
-    mergeMethod: merge
+    blocker_label: ""
+    max_goroutines: 0
+    merge_method: merge
     policy:
-      fromBranchProtection: true
+      from-branch-protection: true
       optional-contexts: {}
       required-contexts: {}
       required-if-present-contexts: {}
-      skipUnknownContexts: false
+      skip-unknown-contexts: false
     pr_status_base_url: ""
-    squashLabel: ""
+    squash_label: ""
     target_url: http://deck-jx.
   plugins:
     entries:
@@ -41,7 +41,7 @@ spec:
     - dog
     - pony
   policy:
-    protectTested: true
+    protect_tested: true
   postsubmits:
     entries:
     - agent: tekton
