--- a/pkg/pipelinescheduler/test_data/merger_with_mergemethod/parent.yaml
+++ b/pkg/pipelinescheduler/test_data/merger_with_mergemethod/parent.yaml
@@ -10,13 +10,13 @@ external_plugins:
 schedulerAgent:
   agent: prow
 policy:
-  protectTested: true
+  protect_tested: true
 merger:
-  blockerLabel: hold
+  blocker_label: hold
   pr_status_base_url: http://fakeurl
-  maxGoroutines: 5
+  max_goroutines: 5
   policy:
-    fromBranchProtection: true
+    from-branch-protection: true
     required-contexts:
       entries:
         - context1
@@ -29,7 +29,7 @@ merger:
     optional-contexts:
       entries:
         - opt1
-  mergeMethod: merge
+  merge_method: merge
 postsubmits:
   entries:
     - name: release
@@ -59,7 +59,7 @@ presubmits:
               - needs-rebase
       policy:
         protect: true
-        requiredStatusChecks:
+        required_status_checks:
           contexts:
             entries:
               - integration
