--- a/pkg/pipelinescheduler/test_data/with_parent/parent.yaml
+++ b/pkg/pipelinescheduler/test_data/with_parent/parent.yaml
@@ -12,11 +12,11 @@ external_plugins:
 schedulerAgent:
   agent: prow
 policy:
-  protectTested: true
+  protect_tested: true
 merger:
   policy:
-    fromBranchProtection: true
-    skipUnknownContexts: false
+    from-branch-protection: true
+    skip-unknown-contexts: false
 postsubmits:
   entries:
     - name: release
@@ -45,7 +45,7 @@ presubmits:
               - needs-rebase
       policy:
         protect: true
-        requiredStatusChecks:
+        required_status_checks:
           contexts:
             entries:
               - integration
