fix: add test case for different git providers

--- a/pkg/cmd/repository/create/test_data/input/.jx/gitops/source-config.yaml
+++ b/pkg/cmd/repository/create/test_data/input/.jx/gitops/source-config.yaml
@@ -9,4 +9,10 @@ spec:
     repositories:
       - name: jx-cli
       - name: jx-gitops
+  - owner: mygitlaborg
+    provider: https://mygitlab.com
+    providerKind: gitlab
+    providerName: mygitlab
+    repositories:
+      - name: somegitlab
   scheduler: cheese
