--- a/pkg/cmd/scheduler/test_data/versionStream/schedulers/in-repo.yaml
+++ b/pkg/cmd/scheduler/test_data/versionStream/schedulers/in-repo.yaml
@@ -39,6 +39,35 @@ spec:
       - pony
   policy:
     protect_tested: true
+  queries:
+    - excludedBranches: { }
+      included_branches: { }
+      labels:
+        entries:
+          - approved
+      milestone: ""
+      missingLabels:
+        entries:
+          - do-not-merge
+          - do-not-merge/hold
+          - do-not-merge/work-in-progress
+          - needs-ok-to-test
+          - needs-rebase
+      review_approved_required: false
+    - excludedBranches: { }
+      included_branches: { }
+      labels:
+        entries:
+          - updatebot
+      milestone: ""
+      missingLabels:
+        entries:
+          - do-not-merge
+          - do-not-merge/hold
+          - do-not-merge/work-in-progress
+          - needs-ok-to-test
+          - needs-rebase
+      review_approved_required: false
   schedulerAgent:
     agent: tekton
   trigger:
