fix: auto-upgrade requirements + charts
add a custom upgrade mechanism so that if folks are using the old tekton chart or build packs we auto-upgrade to the new shiny tekton engine based build pack and latest tekton chart

--- a/pkg/cmd/helmfile/resolve/test_data/bucketrepo-svc/jx-requirements.yml
+++ b/pkg/cmd/helmfile/resolve/test_data/bucketrepo-svc/jx-requirements.yml
@@ -1,3 +1,7 @@
+buildPacks:
+  buildPackLibrary:
+    gitRef: master
+    gitURL: https://github.com/jenkins-x/jxr-packs-kubernetes.git
 cluster:
   namespace: jx
   provider: gke
