--- a/pkg/cmd/helmfile/resolve/test_data/bucketrepo-svc/expected-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/bucketrepo-svc/expected-helmfile.yaml
@@ -2,15 +2,13 @@ filepath: ""
 repositories:
 - name: dev
   url: http://bucketrepo/bucketrepo/charts/
-- name: jenkins-x
-  url: https://storage.googleapis.com/chartmuseum.jenkins-x.io
+- name: cdf
+  url: https://cdfoundation.github.io/tekton-helm-chart
 releases:
-- chart: jenkins-x/tekton
-  version: 0.0.56
-  name: tekton
-  namespace: jx
-  values:
-  - versionStream/charts/jenkins-x/tekton/values.yaml.gotmpl
+- chart: cdf/tekton-pipeline
+  version: 0.0.5
+  name: tekton-pipeline
+  namespace: tekton-pipelines
 - chart: dev/dummy
   version: 1.2.3
   name: dummy
