--- a/pkg/cmd/helmfile/resolve/test_data/no-versionstream/expected-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/no-versionstream/expected-helmfile.yaml
@@ -15,6 +15,8 @@ releases:
   version: 0.0.5
   name: tekton-pipeline
   namespace: tekton-pipelines
+  values:
+  - versionStream/charts/cdf/tekton-pipeline/values.yaml.gotmpl
 - chart: jenkins-x/jxboot-helmfile-resources
   version: 0.0.255
   name: jxboot-helmfile-resources
