--- a/pkg/cmd/helmfile/resolve/test_data/no-versionstream/expected-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/no-versionstream/expected-helmfile.yaml
@@ -18,20 +18,24 @@ releases:
   values:
   - versionStream/charts/cdf/tekton-pipeline/values.yaml.gotmpl
 - chart: jenkins-x/jxboot-helmfile-resources
-  version: 0.0.255
+  version: 1.0.1
   name: jxboot-helmfile-resources
   namespace: jx
+  values:
+  - versionStream/charts/jenkins-x/jxboot-helmfile-resources/values.yaml.gotmpl
 - chart: bitnami/external-dns
-  version: 3.1.2
+  version: 3.2.0
   name: external-dns
   namespace: foo
   values:
+  - versionStream/charts/bitnami/external-dns/values.yaml.gotmpl
   - values/external-dns/values.yaml
 - chart: external-secrets/kubernetes-external-secrets
-  version: 4.0.0
+  version: 5.2.0
   name: kubernetes-external-secrets
   namespace: external-secrets
   values:
+  - versionStream/charts/external-secrets/kubernetes-external-secrets/values.yaml.gotmpl
   - values/kubernetes-external-secrets/values.yaml.gotmpl
 - chart: doesnotexist/bucketrepo
   name: bucketrepo
