chore: lets replace the domain if it is changed in terraform

--- a/pkg/cmd/requirement/merge/test_data/changes.yml
+++ b/pkg/cmd/requirement/merge/test_data/changes.yml
@@ -14,7 +14,7 @@ environments:
 - key: staging
 - key: production
 ingress:
-  domain: ""
+  domain: "foo.io"
   externalDNS: false
   tls:
     email: ""
