--- a/pkg/cmd/requirement/merge/test_data/expected.yml
+++ b/pkg/cmd/requirement/merge/test_data/expected.yml
@@ -50,7 +50,7 @@ environments:
   key: production
 gitops: true
 ingress:
-  domain: ""
+  domain: foo.io
   externalDNS: false
   namespaceSubDomain: -jx.
   tls:
