--- a/pkg/cmd/helmfile/resolve/test_data/local-secrets/expected-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/local-secrets/expected-helmfile.yaml
@@ -1,15 +1,11 @@
 filepath: ""
 repositories:
-- name: doesnotexist
+- name: jenkins-x
   url: https://storage.googleapis.com/chartmuseum.jenkins-x.io
 - name: cdf
   url: https://cdfoundation.github.io/tekton-helm-chart
 - name: jx3
   url: https://storage.googleapis.com/jenkinsxio/charts
-- name: jenkins-x
-  url: https://storage.googleapis.com/chartmuseum.jenkins-x.io
-- name: bitnami
-  url: https://charts.bitnami.com/bitnami
 releases:
 - chart: cdf/tekton-pipeline
   version: 0.0.5
@@ -21,15 +17,18 @@ releases:
   version: 0.0.255
   name: jxboot-helmfile-resources
   namespace: jx
-- chart: bitnami/external-dns
-  version: 3.1.2
-  name: external-dns
-  namespace: foo
-  values:
-  - values/external-dns/values.yaml
-- chart: doesnotexist/bucketrepo
-  name: bucketrepo
+- chart: jx3/jenkins-x-crds
+  version: 1.0.7
+  name: jenkins-x-crds
   namespace: jx
+  values:
+  - versionStream/charts/jx3/jenkins-x-crds/values.yaml.gotmpl
+- chart: jx3/vault-instance
+  name: vault-instance
+  namespace: secret-infra
+- chart: jx3/pusher-wave
+  name: pusher-wave
+  namespace: secret-infra
 - chart: jx3/local-external-secrets
   version: 0.0.3
   name: local-external-secrets
