--- a/pkg/cmd/scheduler/test_data/config-root/namespaces/jx/jxboot-helmfile-resources/devenv.yaml
+++ b/pkg/cmd/scheduler/test_data/config-root/namespaces/jx/jxboot-helmfile-resources/devenv.yaml
@@ -14,6 +14,8 @@ spec:
   namespace: jx
   promotionStrategy: Never
   webHookEngine: "Lighthouse"
+  source:
+    url: https://github.com/fake/env-mycluster-dev.git
   teamSettings:
     appsRepository: http://chartmuseum.jenkins-x.io
     buildPackRef: "master"
