--- a/pkg/cmd/helmfile/template/test_data/helmfile.yaml
+++ b/pkg/cmd/helmfile/template/test_data/helmfile.yaml
@@ -1,6 +1,6 @@
 repositories:
 - name: external-secrets
-  url: https://godaddy.github.io/kubernetes-external-secrets
+  url: https://external-secrets.github.io/kubernetes-external-secrets
 - name: jenkins-x
   url: https://storage.googleapis.com/chartmuseum.jenkins-x.io
 releases:
