--- a/pkg/cmd/helmfile/resolve/test_data/local-secrets/expected-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/local-secrets/expected-helmfile.yaml
@@ -13,28 +13,43 @@ releases:
   namespace: tekton-pipelines
   values:
   - versionStream/charts/cdf/tekton-pipeline/values.yaml.gotmpl
+  forceNamespace: ""
+  skipDeps: null
 - chart: jenkins-x/jxboot-helmfile-resources
   version: 0.0.255
   name: jxboot-helmfile-resources
   namespace: jx
+  forceNamespace: ""
+  skipDeps: null
 - chart: jx3/jenkins-x-crds
   version: 1.0.7
   name: jenkins-x-crds
   namespace: jx
   values:
   - versionStream/charts/jx3/jenkins-x-crds/values.yaml.gotmpl
+  forceNamespace: ""
+  skipDeps: null
 - chart: jx3/vault-instance
   name: vault-instance
   namespace: secret-infra
+  forceNamespace: ""
+  skipDeps: null
 - chart: jx3/pusher-wave
   name: pusher-wave
   namespace: secret-infra
+  forceNamespace: ""
+  skipDeps: null
 - chart: jx3/local-external-secrets
   version: 0.0.3
   name: local-external-secrets
   namespace: jx
+  forceNamespace: ""
+  skipDeps: null
 - chart: jx3/jx-build-controller
   name: jx-build-controller
   namespace: jx
+  forceNamespace: ""
+  skipDeps: null
 templates: {}
 missingFileHandler: ""
+renderedvalues: {}
