--- a/pkg/cmd/helmfile/add/test_data/input/expected-helmfile.yaml
+++ b/pkg/cmd/helmfile/add/test_data/input/expected-helmfile.yaml
@@ -8,10 +8,23 @@ repositories:
   url: https://raw.githubusercontent.com/jenkinsci/kubernetes-operator/master/chart
 releases:
 - chart: jenkins-x/tekton
+  forceNamespace: ""
+  skipDeps: null
 - chart: jenkins-x/jxboot-helmfile-resources
+  forceNamespace: ""
+  skipDeps: null
 - chart: bitnami/external-dns
+  forceNamespace: ""
+  skipDeps: null
 - chart: doesnotexist/bucketrepo
+  forceNamespace: ""
+  skipDeps: null
 - chart: jenkins-x/jx-test-collector
+  forceNamespace: ""
+  skipDeps: null
 - chart: jenkins/jenkins-operator
+  forceNamespace: ""
+  skipDeps: null
 templates: {}
 missingFileHandler: ""
+renderedvalues: {}
