--- a/pkg/cmd/helmfile/resolve/test_data/input/expected-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/input/expected-helmfile.yaml
@@ -21,33 +21,48 @@ releases:
   namespace: secret-infra
   values:
   - values/kubernetes-external-secrets/values.yaml.gotmpl
+  forceNamespace: ""
+  skipDeps: null
 - chart: stable/chartmuseum
   version: 2.4.1
   name: chartmuseum
   namespace: jx
   values:
   - versionStream/charts/stable/chartmuseum/values.yaml.gotmpl
+  forceNamespace: ""
+  skipDeps: null
 - chart: cdf/tekton-pipeline
   version: 0.0.5
   name: tekton-pipeline
   namespace: tekton-pipelines
   values:
   - versionStream/charts/cdf/tekton-pipeline/values.yaml.gotmpl
+  forceNamespace: ""
+  skipDeps: null
 - chart: jenkins-x/jxboot-helmfile-resources
   version: 0.0.255
   name: jxboot-helmfile-resources
   namespace: jx
+  forceNamespace: ""
+  skipDeps: null
 - chart: bitnami/external-dns
   version: 3.1.2
   name: external-dns
   namespace: foo
   values:
   - values/external-dns/values.yaml
+  forceNamespace: ""
+  skipDeps: null
 - chart: doesnotexist/bucketrepo
   name: bucketrepo
   namespace: jx
+  forceNamespace: ""
+  skipDeps: null
 - chart: jx3/jx-build-controller
   name: jx-build-controller
   namespace: jx
+  forceNamespace: ""
+  skipDeps: null
 templates: {}
 missingFileHandler: ""
+renderedvalues: {}
