fix: custom helmfile upgrade for new nginx chart
Signed-off-by: ankitm123 <ankitmohapatra123@gmail.com>

--- a/pkg/cmd/helmfile/resolve/test_data/input/helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/input/helmfile.yaml
@@ -10,6 +10,12 @@ releases:
     namespace: foo
   # test using a local repo prefix and URL
   - chart: doesnotexist/bucketrepo
+  - chart: stable/nginx-ingress
+    version: 1.39.1
+    name: nginx-ingress
+    namespace: nginx
+    values:
+      - versionStream/charts/stable/nginx-ingress/values.yaml.gotmpl
 repositories:
   - name: doesnotexist
     url: https://storage.googleapis.com/chartmuseum.jenkins-x.io
