--- a/pkg/cmd/helmfile/resolve/test_data/input/expected-helmfile.yaml
+++ b/pkg/cmd/helmfile/resolve/test_data/input/expected-helmfile.yaml
@@ -2,6 +2,7 @@ filepath: ""
 helmfiles:
 - path: helmfiles/foo/helmfile.yaml
 - path: helmfiles/jx/helmfile.yaml
+- path: helmfiles/nginx/helmfile.yaml
 - path: helmfiles/secret-infra/helmfile.yaml
 - path: helmfiles/tekton-pipelines/helmfile.yaml
 templates: {}
